# mcp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  main.py  main2.py  models.py  pyproject.toml
